--- a/textract.ipynb
+++ b/textract.ipynb
@@ -9,6 +9,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Author: Sandipan Dey"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -785,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process Text"
+    "### 1. Process Text"
    ]
   },
   {
@@ -1214,7 +1223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process Document"
+    "### 2. Process Document"
    ]
   },
   {
@@ -2282,7 +2291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process Forms"
+    "### 3. Process Forms"
    ]
   },
   {
@@ -2618,7 +2627,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Process Tables"
+    "### 4. Process Tables"
    ]
   },
   {
