text extraction with different libraries / APIs

--- a/textract.ipynb
+++ b/textract.ipynb
@@ -9,20 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Author: Sandipan Dey"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create IAM user and setup credentials"
+    "## create IAM user and setup credentials"
    ]
   },
   {
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +63,15 @@
    "outputs": [],
    "source": [
     "response = client.detect_document_text(Document={'Bytes':bytearray(open(imfile, 'rb').read())})  # local or S3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"PANCard.png\" width=\"800\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -813,6 +813,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"PANCard.png\" width=\"800\"/>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -851,6 +860,15 @@
    "outputs": [],
    "source": [
     "response = client.detect_document_text(Document={'Bytes':bytearray(open('claim_form.png', 'rb').read())})  # local or S3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"claim_form.png\" width=\"2000\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -984,6 +1002,15 @@
    "outputs": [],
    "source": [
     "response = client.detect_document_text(Document={'Bytes':bytearray(open('claim_form2.png', 'rb').read())})  # local or S3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"claim_form2.png\" width=\"2000\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -1267,6 +1294,24 @@
     "        fields = page.form.searchFieldsByKey(key)\n",
     "        for field in fields:\n",
     "            print(\"Field: Key: {}, Value: {}\".format(field.key, field.value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.detect_document_text(Document={'Bytes':bytearray(open('claim_form2.png', 'rb').read())})  # local or S3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"claim_form2.png\" width=\"2000\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -2281,9 +2326,7 @@
    ],
    "source": [
     "import trp\n",
-    "\n",
     "doc = trp.Document(response)\n",
-    "\n",
     "processDocument(doc)"
    ]
   },
@@ -2296,11 +2339,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from process_forms import get_kv_map, get_kv_relationship, print_kvs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.analyze_document(Document={'Bytes':bytearray(open('AADHAAR.jpg', 'rb').read())}, FeatureTypes=['FORMS'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"AADHAAR.jpg\" width=\"800\"/>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gender:  : MALE \n",
+      "DOB:  : XX-XX-XXXX \n",
+      "Name  : XXXX \n",
+      " : GOVERNMENT OF INDIA \n"
+     ]
+    }
+   ],
+   "source": [
+    "key_map, value_map, block_map = get_kv_map(response)\n",
+    "kvs = get_kv_relationship(key_map, value_map, block_map)\n",
+    "print_kvs(kvs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.analyze_document(Document={'Bytes':bytearray(open('adharapp.jpg', 'rb').read())}, FeatureTypes=['FORMS'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "    <img src=\"adharapp.jpg\" width=\"800\"/>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date of Birth:  : 30 01 1996 \n",
+      "District  : NORTH 24 PGS \n",
+      "House No/ Bldg./Apt.  : 123 \n",
+      "Street/Road/Lane  : K.G.R. PATH \n",
+      "Area/locality/sector  : KANCHRAPARA \n",
+      "Post Office  : KANCHRAPARA \n",
+      "Village/Town/City  : KANCHRAPARA \n",
+      "Verified  : \n",
+      "State  : WEST BENGAL \n",
+      "Declared  : \n",
+      "Landmark  : JORAMANDIR \n",
+      "Full Name:  : SUMIT TRIBEDI \n",
+      "Sub-District  : \n",
+      "Pre-Enrolment ID :  : \n",
+      "NPR Receipt/TIN Number :  : \n",
+      "Age:  : 22 \n",
+      "Male  : ( ) \n",
+      "Female  : ( ) \n",
+      "Address:  :  /o()D/0()S/0()W/o ()(H/o() \n",
+      "In case of Correction provide your EID No here:  : 0 0 8 1 2 5 4 1 2 5 8 7 0 28 04 2011 15 35 19 while filling the form. Use capital letters only. \n"
+     ]
+    }
+   ],
+   "source": [
+    "key_map, value_map, block_map = get_kv_map(response)\n",
+    "kvs = get_kv_relationship(key_map, value_map, block_map)\n",
+    "print_kvs(kvs)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = client.analyze_document(Document={'Bytes':bytearray(open('claim_form2.png', 'rb').read())}, FeatureTypes=['TABLES','FORMS'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"claim_form2.png\" width=\"2000\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -2537,18 +2694,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from process_forms import get_kv_map, get_kv_relationship, print_kvs"
+    "<div>\n",
+    "<img src=\"claim_form2.png\" width=\"2000\"/>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2637,6 +2796,15 @@
    "outputs": [],
    "source": [
     "response = client.analyze_document(Document={'Bytes':bytearray(open('paper_book.png', 'rb').read())}, FeatureTypes=['TABLES'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"paper_book.png\" width=\"2000\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -12079,13 +12247,6 @@
     "for line, conf in process_text(response).items():\n",
     "    print(line, conf)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
